@@ -1,3 +1,13 @@
+2005-04-05  Richard Sandiford  <rsandifo@redhat.com>
+
+	* elfxx-mips.c (MIPS_ELF_OPTIONS_SECTION_NAME_P): New macro.
+	(_bfd_mips_elf_section_from_shdr): Use it to check for recognized
+	SHT_MIPS_OPTIONS names.  Allow all sections with unrecognised
+	section flags.
+	(_bfd_mips_elf_fake_sections): Use MIPS_ELF_OPTIONS_SECTION_NAME_P
+	to check for SHT_MIPS_OPTIONS sections.
+	(_bfd_mips_elf_set_section_contents): Likewise.
+
 2005-04-04  Eric Christopher  <echristo@redhat.com>
 
 	* elfxx-mips.c (_bfd_elf_mips_get_relocated_section_contents):
